Added intro to python and data science

--- a/workshop/jupyter/content/notebooks/01-introduction.ipynb
+++ b/workshop/jupyter/content/notebooks/01-introduction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Doing Geospatial in Python\n",
     "\n",
-    "Version: 1.0, 2019-08-23\n",
+    "Version: 1.1, 2021-08-27\n",
     "\n",
     "<img style=\"float: left;\" src=\"images/geopython-logo.png\">\n",
     "\n",
@@ -29,6 +29,7 @@
     "\n",
     "## Table of contents\n",
     "\n",
+    "0. [Introduction to Python 3](00-intro-to-python.ipynb)\n",
     "1. [Introduction](01-introduction.ipynb)\n",
     "2. [Geometry](02-geometry.ipynb)\n",
     "3. [Spatial Reference Systems](03-spatial-reference-systems.ipynb)\n",
@@ -40,7 +41,11 @@
     "9. [Publishing](09-publishing.ipynb)\n",
     "10. [Remote Data](10-remote-data.ipynb)\n",
     "11. [Emerging Technology and Trends](11-emerging-technology-trends.ipynb)\n",
-    "12. [Conclusion](12-conclusion.ipynb)\n",
+    "12. [Machine Learning](12-machine-learning.ipynb)\n",
+    "13. [Scikit Learn](13-scikit-learn.ipynb)\n",
+    "14. [NLP with Spacy](14-spacy.ipynb)\n",
+    "15. [K-Means](15-k-means.ipynb)\n",
+    "16. [Conclusion](12-conclusion.ipynb)\n",
     "\n",
     "\n",
     "## Workshop environment\n",
