--- a/workshop/jupyter/content/notebooks/11-emerging-technology-trends.ipynb
+++ b/workshop/jupyter/content/notebooks/11-emerging-technology-trends.ipynb
@@ -54,7 +54,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "Error",
+     "evalue": "IPyKernel not installed into interpreter Python 3.7.8 64-bit:C:\\Program Files (x86)\\Microsoft Visual Studio\\Shared\\Python37_64\\python.exe",
+     "traceback": [
+      "Error: IPyKernel not installed into interpreter Python 3.7.8 64-bit:C:\\Program Files (x86)\\Microsoft Visual Studio\\Shared\\Python37_64\\python.exe",
+      "at w.handleKernelDependencyResponse (c:\\Users\\marco\\.vscode\\extensions\\ms-toolsai.jupyter-2021.8.1054968649\\out\\client\\extension.js:90:246461)",
+      "at w.installMissingDependencies (c:\\Users\\marco\\.vscode\\extensions\\ms-toolsai.jupyter-2021.8.1054968649\\out\\client\\extension.js:90:245644)",
+      "at processTicksAndRejections (internal/process/task_queues.js:93:5)"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import requests\n",
@@ -179,15 +191,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[<- Remote data](10-remote-data.ipynb) | [Conclusion ->](12-conclusion.ipynb)"
+    "[<- Remote data](10-remote-data.ipynb) | [Machine Learning ->](12-machine-learning.ipynb)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.7.8 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -199,7 +210,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
+  },
+  "interpreter": {
+   "hash": "57baa5815c940fdaff4d14510622de9616cae602444507ba5d0b6727c008cbd6"
   }
  },
  "nbformat": 4,
