--- a/workshop/jupyter/content/notebooks/03-spatial-reference-systems.ipynb
+++ b/workshop/jupyter/content/notebooks/03-spatial-reference-systems.ipynb
@@ -235,9 +235,9 @@
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
-    "import shapely.wkb\n",
+    "import shapely.wkt\n",
     "\n",
-    "borders = shapely.wkb.loads(feature.GetGeometryRef().ExportToWkb())\n",
+    "borders = shapely.wkt.loads(feature.GetGeometryRef().ExportToWkt())\n",
     "x,y = borders.geoms[0].exterior.xy\n",
     "fig = plt.figure(1, dpi=90)\n",
     "ax = fig.add_subplot(111)\n",
